2007-09-29  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tclresp.c: [ns_headers] last optional length argument
	now allows for "-1" in which case it removes optional
	Content-Length from output headers, thus allowing us to send
	binary streams of initially unknown size.

2007-09-25  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tcljob.c: Make sure -jobid parameters ignored if empty
	string is given. also add error message to the log for detached
	and failed jobs                

2007-09-20  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/man3/Ns_Sls.man: Fix stray curly-bracket and add extra markup
	around types, args etc.

2007-09-14  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/log.c: Drop the idea of maxloglevel auxiliary logging levels and
	instead add a new Ns_CreateLogSeverity() which creates a named severity
	level. C code still passes round an integer severity level, the severity
	name appears in the log file.

	ns_logctl severity can create new severity levels on the Tcl side and
	enable/disable them individually, unlike the old scheme in which to
	enable level 100 levels 0-99 also had to be enabled. A reasonable number
	of integer levels are still supported for backwards compatibility.

	ns_logctl severities lists all created severites.

	* nsd/callbacks.c:
	* nsd/tclinit.c: Update after renaming Ns_LogLevel() to
	Ns_LogSeverityEnabled().

	* doc/src/mann/ns_log.man:
	* tests/ns_log.test: Updated.

	* nsd/log.c: Call filters 'filters' instead of callbacks. Remove some
	redundant wrapper routines. Shuffle the code around.

	* nsd/log.c:
	* tests/ns_log.test: Guard against disabling the Fatal log
	severity. Make sure that Fatal log messages are always flushed, even
	when 'hold' is active.

2007-09-12  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/mann/ns_log.man:
	* doc/src/ns_log.man:
	* doc/src/ns_logctl.man:
	* doc/src/ns_logroll.man: Combine the error logging commands and move
	into place. Update.
